--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
   <properties>
     <jersey.version>1.18.1</jersey.version>
     <servlet-api.version>2.4</servlet-api.version>
-    <slf4j.version>1.7.7</slf4j.version>
-    <gson.version>2.3.1</gson.version>
+    <slf4j.version>1.7.21</slf4j.version>
+    <gson.version>2.7</gson.version>
     <mysql-connector.version>5.1.36</mysql-connector.version>
   </properties>
   
@@ -65,13 +65,30 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.1</version>
+        <version>3.5.1</version>
         <configuration>
           <source>1.8</source>
           <target>1.8</target>
         </configuration>
       </plugin>
-            
+      
+      <!-- Javadoc plugin -->
+      <plugin>
+	    <groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-javadoc-plugin</artifactId>
+		<version>2.10.3</version>
+		<configuration>
+		  <show>public</show>
+		</configuration>
+		<executions>
+		  <execution>
+			<id>attach-javadocs</id>
+			<goals>
+			  <goal>jar</goal>
+			</goals>
+		  </execution>
+		</executions>
+	  </plugin>      
     </plugins>
   </build>
 </project>
